shared/styles/custom-element.scss
/* ... */
[hide-outline] {
    mat-form-field {
        .mat-form-field-outline > * {
            border-color: rgba(0, 0, 0, 0);
        }
        &:hover .mat-form-field-outline > *,
        &.mat-focused .mat-form-field-outline > * {
            border-color: rgba(0, 0, 0, 0.5);
        }
    }
}

[no-wrapper] {
    mat-form-field {
        .mat-form-field-wrapper {
            padding: 0;
            margin: 0;
        }
    }
}

.mat-button-toggle-button[aria-pressed='true'] {
    background-color: var(--primary);
    color: var(--font-light);
}

.mat-chip.mat-standard-chip {
    &.mat-primary {
        color: var(--primary);
    }
    &.mat-accent {
        background-color: var(--pending);
    }
}

#placeos {
    mat-chip {
        &[color='internal'] {
            color: var(--font-light);
            background-color: var(--primary);
        }
        &[color='external'] {
            color: var(--font-light);
            background-color: var(--pending);
        }
    }
}

.mat-spinner {
    circle {
        stroke: var(--primary);
    }
}

.mat-progress-bar-fill {
    &::after {
        background-color: var(--primary);
    }
}

div.mat-menu-panel {
    max-width: calc(100vw - 1em);
    .desk {
        line-height: 48px;
        padding-left: 8px;
        padding-right: 8px;
        span {
            font-weight: 400;
            text-transform: capitalize;
        }
    }
}

.mat-tooltip {
    font-size: 0.8em;
    background-color: rgba(#212121, 0.85);
}

.mat-table {
    td.mat-cell:last-of-type {
        padding-right: 0;
    }
}

a-date-picker {
    .date.active {
        background-color: var(--primary) !important;
    }
    .dot {
        background-color: var(--primary) !important;
    }
}

.chevron {
    position: relative;

    > div {
        position: relative;
        top: -2px;
        height: 12px;
        width: 12px;
        transform: rotate(45deg);
        transition: transform 200ms, top 200ms;
        border-bottom: 3px solid #000;
        border-right: 3px solid #000;
    }

    &.upside {
        > div {
            top: 2px;
            transform: rotate(225deg);
        }
    }
}

form {
    mat-form-field,
    a-date-field,
    an-action-field,
    editor {
        flex: 1;
        min-width: 50%;
    }
}

[disabled] {
    .chevron {
        opacity: 0.35;
    }
}

.mat-menu-content {
    .legend {
        padding-left: 8px;
        display: flex;
        align-items: center;
        line-height: 2em;
        .color {
            border-radius: 50%;
            height: 10px;
            width: 10px;
            margin-right: 5px;
        }
    }
}

#placeos .mat-datepicker-toggle {
    button {
        position: relative;
        margin-top: -1rem;
        top: 0.25rem;
    }
}

[qr-code] {
    font-size: 6vmin;

    h2 {
        font-size: 1.5em;
        margin: 0;
        padding: 0;
    }

    span {
        font-weight: 500;
    }

    &.space-y-2 > * + * {
        margin-top: 0.5em;
    }

    img {
        height: 70vmin;
        width: 70vmin;
    }
}

custom-table[asset-requests] {
    cdk-row {
        background-color: #fff;
        [cdk-cell]:not(:first-child) {
            border-left: 1px solid #ccc;
        }
    }
    cdk-header-row {
        background: none !important;
        [cdk-header-cell] {
            background: none;
        }
    }
}

custom-table[header-dark] {
    cdk-header-row {
        background: #263238 !important;
        color: #fff;
        [cdk-header-cell] {
            background: none;
        }
    }
}

#placeos {
    .cdk-overlay-pane {
        max-width: none !important;
    }

    .svg-viewer__label {
        top: -200%;
        left: -200%;
        line-height: 1.1;
    }
}

#placeos {
    .dark {
        mat-dialog-container {
            background-color: #404040;
            color: #fff;

        }

        mat-bottom-sheet-container {
            background-color: #404040;
            color: #fff;

        }

        .mat-paginator {
            background-color: inherit;
            color: inherit;
        }


        .mat-spinner {
            circle {
                stroke: var(--secondary);
            }
        }

        mat-pseudo-checkbox.mat-pseudo-checkbox-checked {
            background: var(--secondary);
        }

        mat-checkbox {

            .mat-checkbox-frame {
                border-color: #fff6
            }

            &.mat-checkbox-checked .mat-checkbox-background {
                background-color: var(--secondary);
            }
        }

        .mat-autocomplete-panel {
            @apply bg-neutral-700;
        }

        .ql-toolbar {
            .ql-stroke {
                stroke: #eee;
            }
            .ql-picker-label::before {
                color: #fff;
            }
        }
        .ql-blank::before {
            color: #fff8;
        }

        .mat-menu-panel,
        .mat-select-panel  {
            @apply bg-neutral-800;
        }

        .mat-option-text {
            @apply text-white;
        }

        mat-option.mat-active {
            @apply bg-white/5;
         }

       .mat-active .mat-option-text {
            @apply text-blue-500;
        }

        .mat-option:hover {
            @apply bg-white/10;
        }
    }
    mat-bottom-sheet-container {
        padding: 0;
    }
}

